Fix AnimatedLabel spacings

--- a/src/scripts/OSUIFramework/Pattern/AnimatedLabel/scss/_animated-label.scss
+++ b/src/scripts/OSUIFramework/Pattern/AnimatedLabel/scss/_animated-label.scss
@@ -19,7 +19,7 @@
 			}
 
 			[data-textarea] {
-				padding-top: var(--space-base);
+				padding-bottom: var(--space-xs);
 			}
 		}
 	}
@@ -95,7 +95,6 @@
 			}
 
 			&[data-textarea] {
-				display: block;
 				margin-top: var(--space-s);
 
 				& + span.validation-message {
